--- a/package.json
+++ b/package.json
@@ -26,20 +26,25 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "jsdom": "^16.5.1",
+    "jsdom-global": "^3.0.2",
     "prettier": "2.2.1",
     "typescript": "^4.1.3",
     "webpack": "^5.25.1",
