--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "build:dev": "webpack --mode=development",
     "watch": "webpack --watch",
     "clean": "rm -rf dist coverage",
-    "test": "jest",
+    "test": "npx jest && npx loki",
+    "jest": "jest",
     "coverage": "jest --collect-coverage",
     "lint": "eslint ./src/ --fix",
     "check": "npm run lint && npm test",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "loki": "loki:test",
+    "loki:update": "loki update",
+    "loki:test": "loki test",
+    "loki:approve": "loki approve"
   },
   "author": "ilyacyclone",
   "license": "ISC",
@@ -50,10 +55,26 @@
     "jest": "^26.6.3",
     "jsdom": "^16.5.1",
     "jsdom-global": "^3.0.2",
+    "loki": "^0.28.1",
     "prettier": "2.2.1",
     "typescript": "^4.1.3",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "loki": {
+    "configurations": {
+      "desktop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "googlepixel": {
+        "target": "chrome.app",
+        "preset": "Google Pixel"
+      }
+    }
   }
 }
