--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -29,5 +34,17 @@
             }
         ],
         "react/prop-types": "off"
-    }
+    },
+    "overrides": [
+        {
+          "files": [
+            "webpack.config.js"
+          ],
+          "rules": {
+            "@typescript-eslint/no-var-requires": [
+              "off"
+            ]
+          }
+        }
+    ]
 }
