--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,3 @@
 {
-    "presets": [
-        "@babel/env",
-        "@babel/preset-typescript",
-        "@babel/preset-react"
-    ]
+  "presets": ["@babel/env", "@babel/preset-typescript", "@babel/preset-react"]
 }
