--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "jest": "^26.6.3",
     "jsdom": "^16.5.1",
     "jsdom-global": "^3.0.2",
+    "lint-staged": "^10.5.4",
     "loki": "^0.28.1",
     "prettier": "2.2.1",
+    "simple-git-hooks": "^2.2.0",
     "typescript": "^4.1.3",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
@@ -76,5 +78,11 @@
         "preset": "Google Pixel"
       }
     }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": "eslint --cache --fix"
   }
 }
